--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "bootstrap": "^4.3.1",
     "firebase": "^6.2.4",
     "react-bootstrap": "^1.0.0-beta.9",
-    "react-redux": "^7.1.0",
+    "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
     "react-router": "^3.2.3",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
+    "redux-firestore": "^0.8.0",
     "redux-thunk": "^2.3.0"
   }
 }
